# study_lad

./: .gitignore  info.md
7_Lesson_DRF/: pyproject.toml
7_Lesson_DRF/blog/: models.py  serializers.py  views.py
7_Lesson_DRF/blog/migrations/: 0001_initial.py
7_Lesson_DRF/drfsite/: settings.py  urls.py
9_Lesson_TaskManager/: pyproject.toml
9_Lesson_TaskManager/task_manager/: settings.py  urls.py
9_Lesson_TaskManager/task_manager_app/: forms.py  models.py  tests.py  urls.py  views.py
9_Lesson_TaskManager/task_manager_app/migrations/: 0001_initial.py  0002_typeofpomodoro_pomodoro.py
9_Lesson_TaskManager/task_manager_app/templates/task_manager_app/: base.html  task_confirm_delete.html  task_form.html  task_list.html
TEST_movie_project/: pyproject.toml  readme.md
TEST_movie_project/movie_app/: models.py
TEST_movie_project/movie_app/migrations/: 0001_initial.py  0002_movie_budget_movie_year.py
TEST_movie_project/movie_project/: settings.py
TEST_neuro/: pyproject.toml
TEST_neuro/first_neural_network_app/: apps.py  forms.py  models.py  tests.py  urls.py  views.py
TEST_neuro/first_neural_network_app/migrations/: 0001_initial.py  0002_remove_layer_number_of_iterations_and_more.py
TEST_neuro/first_neural_network_app/templates/first_neural_network_app/: neuronet_list.html
TEST_neuro/neuro/: asgi.py  settings.py  urls.py  wsgi.py
TEST_neuro/simple_neuro_app/: apps.py  forms.py  models.py  urls.py  views.py
TEST_neuro/simple_neuro_app/migrations/: 0001_initial.py  0002_neuron_alpha_alter_neuron_version.py
TEST_neuro/simple_neuro_app/templates/simple_neuro_app/: index.html  (+2 more)
(+71 files in other folders)
