[tool.poetry]
name = "test-movie-project"
version = "0.1.0"
description = ""
authors = ["KinChu <chuevgenii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = ">=4.2,<5.0"
ipython = "^8.24.0"
django-extensions = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
