[tool.poetry]
name = "test-neuro"
version = "0.1.0"
description = ""
authors = ["KinChu <chuevgenii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
django = ">=4.2,<5.0"
keras = "^3.3.3"
tensorflow = "^2.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
